change block to inherit Sequence to fix spacing

--- a/src/languages/pyret/style-selection/default-style.less
+++ b/src/languages/pyret/style-selection/default-style.less
@@ -44,6 +44,7 @@
 .blocks-ifExpression,
 .blocks-lambdaExpression,
 .blocks-letLikeExpr,
+.blocks-sequence,
 .blocks-structDefinition,
 .blocks-unknown,
 .blocks-variableDefinition,
